@@ -1,3 +1,8 @@
+2007-09-30  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh: (CygbuildPatchApplyMaybe): Unpatch files
+	in reverse order.
+
 2007-09-28  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/cygbuild.sh: (CygbuildCmdInstallCheckReadme):
